Reworked project to maven with Java-11, added required dependencies and started migration from java.util.logging to slf4j (work in progress)